# Computer-Graphics-with-OpenGL

./: .gitignore  README.md
series01/: CMakeCache.txt  CMakeLists.txt  Dependency.cmake  Makefile  cmake_install.cmake
series01/src/: main.cpp
series02/: CMakeLists.txt  Dependency.cmake
series02/dep-spdlog-prefix/src/dep-spdlog-stamp/: dep-spdlog-patch-info.txt  dep-spdlog-update-info.txt
series02/dep-spdlog-prefix/tmp/: dep-spdlog-cfgcmd.txt
series02/src/: main.cpp
series03/: CMakeLists.txt  Dependency.cmake
series03/src/: main.cpp
series04/: CMakeLists.txt
series04/shader/: simple.fs  simple.vs
series04/src/: common.h  context.cpp  context.h  program.cpp  program.h  shader.h
series05/: CMakeLists.txt  Dependency.cmake
series05/shader/: per_vertex_color.fs  simple.fs  simple.vs  texture.fs  texture.vs
series05/src/: context.cpp  context.h  image.cpp  image.h  program.cpp  program.h
series06/: CMakeLists.txt
series06/shader/: texture.fs
series06/src/: context.cpp  main.cpp  shader.cpp
series07/: CMakeLists.txt  Dependency.cmake
series07/src/: context.cpp  context.h  main.cpp  program.cpp  texture.cpp  vertex_layout.cpp
series08/: CMakeLists.txt  README.md  imgui.ini
series08/shader/: lighting.fs  lighting.vs  simple.fs  simple.vs
series08/src/: buffer.h  context.cpp  context.h  program.cpp  program.h  texture.h  vertex_layout.h
series09/: CMakeLists.txt  Dependency.cmake  imgui.ini
series09/shader/: lighting.fs  lighting.vs  per_vertex_color.vs  simple.fs
series09/src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  image.cpp  main.cpp  model.cpp  program.cpp  program.h
series10/: CMakeLists.txt  imgui.ini
series10/shader/: invert.fs  lighting.fs
series10/src/: common.h  context.cpp  context.h  framebuffer.cpp  mesh.h  (+2 more)
series11/: CMakeLists.txt
series12/: CMakeLists.txt  imgui.ini
series13/: CMakeLists.txt  imgui.ini
series14/: CMakeLists.txt  imgui.ini
series15/: CMakeLists.txt  imgui.ini
series16/: CMakeLists.txt
series17/: CMakeLists.txt  imgui.ini
series18/: CMakeLists.txt  Dependency.cmake
(+92 files in other folders)
